--- a/.github/workflows/intro-manual-workflow.yml
+++ b/.github/workflows/intro-manual-workflow.yml
@@ -5,9 +5,10 @@ on:
   push:
     paths:
       - '.github/workflows/intro-manual-workflow.yml'
+
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Hows GitHub Actions?
+      - name: How's GitHub Actions?
         run: echo "Awesome!!"
