custom workflow add trigger

--- a/.github/workflows/intro-custom-workflow.yml
+++ b/.github/workflows/intro-custom-workflow.yml
@@ -1,1 +1,7 @@
 name: Intro - Custom Workflow
+
+on:
+    workflow_dispatch:
+    push:
+      paths:
+        - '.github/workflows/intro-custom-workflow.yml'
