--- a/.github/workflows/intro0scheduled-workflow.yml
+++ b/.github/workflows/intro0scheduled-workflow.yml
@@ -1,1 +1,9 @@
 name: Intro - Scheduled Workflow
+
+on:
+    workflow_dispatch:
+    schedule:
+      - cron: '*/5 * * * *' # Every 5 minutes
+    push:
+      paths:
+        - '.github/workflows/intro-scheduled-workflow.yml'
