add job to print time

--- a/.github/workflows/intro0scheduled-workflow.yml
+++ b/.github/workflows/intro0scheduled-workflow.yml
@@ -7,3 +7,11 @@ on:
     push:
       paths:
         - '.github/workflows/intro-scheduled-workflow.yml'
+
+jobs:
+  execute:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Display current date and time
+        run: echo "The current date and time is $(date)"
