--- a/.github/workflows/intro0scheduled-workflow.yml
+++ b/.github/workflows/intro0scheduled-workflow.yml
@@ -3,7 +3,7 @@ name: Intro - Scheduled Workflow
 on:
     workflow_dispatch:
     schedule:
-      - cron: '*/5 * * * *' # Every 5 minutes
+      - cron: '0 9 * * 1' # Every Monday at 9 AM
     push:
       paths:
         - '.github/workflows/intro-scheduled-workflow.yml'
